# CryptoPulse

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
agents/: __init__.py  graph.py  market_analyst.py  orchestrator.py  portfolio_strategist.py  risk_manager.py  sentiment_analyst.py  state.py  tools.py
api/: __init__.py  main.py  services.py
cryptopulse/: __init__.py  config.py  logging.py  models.py
cryptopulse/ingestion/: __init__.py  binance_client.py  kafka_producer.py  news_crawler.py
cryptopulse/storage/: __init__.py  adls_client.py
docs/: GUIDE.md
frontend/: app.py
frontend/static/css/: style.css
frontend/static/js/: main.js
frontend/templates/: analyze.html  base.html  dashboard.html  ml.html  news.html
functions/: __init__.py  binance_ingestion.py  host.json  news_ingestion.py  requirements.txt
functions/binance_trigger/: function.json
functions/news_trigger/: function.json
infrastructure/: azure_provisioner.py  azure_setup.sh  configure_secrets.sh  databricks_setup.sh  deploy_apps.sh  deploy_containers.sh  deploy_functions.sh  deploy_to_databricks.sh  verify_deployment.sh
infrastructure/scripts/: deploy.py
models/: __init__.py
models/training/: __init__.py  anomaly_detection.py  price_direction.py  signal_fusion.py  spark_ml_pipeline.py
notebooks/: 01_data_ingestion.py  02_bronze_layer.py  03_silver_layer.py  04_gold_features.py  05_sentiment_analysis.py  06_ml_training.py  07_anomaly_detection.py  08_model_serving.py  09_orchestration.py  10_langgraph_agents.py
pipelines/: __init__.py
pipelines/bronze/: __init__.py  news_bronze.py  trades_bronze.py
pipelines/gold/: __init__.py  feature_engineering.py  sentiment_analysis.py
pipelines/silver/: __init__.py  news_silver.py  trades_silver.py
pipelines/utils/: __init__.py  delta_operations.py  spark_session.py  windowing.py
scripts/: __init__.py  clean_notebooks.py  convert_notebooks.py  ingestion_loop.py
tests/: __init__.py  test_agents.py  test_langgraph_agents.py  test_models.py
